--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_forside">Forside</string>
     <string name="title_activity_task_liste">TaskListe</string>
+    <string name="title_activity_single_task">SingleTask</string>
 </resources>
